# system-programming

./: .gitignore  Cargo.toml  README.md
AudioPlayer/src/: audio_player.rs
gui/: audio_player.py
lab-1/: CMakeLists.txt  README.md
lab-2/: CMakeLists.txt  README.md
lab-3/: CMakeLists.txt  README.md
lab-4/: CMakeLists.txt  README.md
lab-4/src/client/: main.cpp
lab-4/src/server/: main.cpp
lab-4/src/util/: common.hpp
project/: .gitignore  Cargo.toml  README.md
project/AudioPlayer/src/: audio_player.rs
project/src/: main.rs
src/: main.rs
src/gui/: audio_player.rs
